sync latest Aurora with en-US

--- a/ga-IE/browser/chrome/browser/devtools/projecteditor.properties
+++ b/ga-IE/browser/chrome/browser/devtools/projecteditor.properties
@@ -11,25 +11,35 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedTitle):
+# This string is displayed as as the title of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedTitle=Athruithe Gan Sábháil
+
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
+# This string is displayed as the message of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=You have unsaved changes that will be lost if you exit. Are you sure you want to continue?
+
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
 # file / folder to be deleted.
-projecteditor.deleteLabel=Delete
+projecteditor.deleteLabel=Scrios
 
 # LOCALIZATION NOTE (projecteditor.deletePromptTitle):
 # This string is displayed as as the title of the confirm prompt that checks
 # to make sure if a file or folder should be removed.
-projecteditor.deletePromptTitle=Delete
+projecteditor.deletePromptTitle=Scrios
 
 # LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a folder should be removed.
-projecteditor.deleteFolderPromptMessage=Are you sure you want to delete this folder?
+projecteditor.deleteFolderPromptMessage=An bhfuil tú cinnte gur mhaith leat an fillteán seo a scriosadh?
 
 # LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a file should be removed.
-projecteditor.deleteFilePromptMessage=Are you sure you want to delete this file?
+projecteditor.deleteFilePromptMessage=An bhfuil tú cinnte gur mhaith leat an comhad seo a scriosadh?
 
 # LOCALIZATION NOTE (projecteditor.newLabel):
 # This string is displayed as a menu item for adding a new file to
