--- a/ga-IE/browser/chrome/browser/devtools/webconsole.properties
+++ b/ga-IE/browser/chrome/browser/devtools/webconsole.properties
@@ -241,3 +241,19 @@ selfxss.okstring=allow pasting
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Taispeáin/folaigh mionsonraí na teachtaireachta.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 sliotán folamh;#1 shliotán folamh;#1 shliotán folamh;#1 sliotán folamh;#1 sliotán folamh
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(innéacs)
+table.iterationIndex=(iteration index)
+table.key=Eochair
+table.value=Luachanna
