--- a/ga-IE/browser/chrome/browser/preferences/preferences.properties
+++ b/ga-IE/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Tá na fianáin seo a leanas sábháilte ar do ríomhaire:
 cookiesFiltered=Meaitseálann na fianáin seo a leanas do chuardach:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Bain sonraí le haghaidh suímh Ghréasáin as líne
 offlineAppRemovePrompt=Tar éis duit an sonraí seo a bhaint, ní bheidh %S ar fáil as líne. An bhfuil tú cinnte gur mian leat an suíomh Gréasáin as líne seo a bhaint?
 offlineAppRemoveConfirm=Bain sonraí as líne
