--- a/ga-IE/browser/chrome/browser/quitDialog.properties
+++ b/ga-IE/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Sábháil agus Scoir
 neverAsk2=&Ná fiafraigh díom arís
 message=An bhfuil fonn ort do chuid cluaisíní agus fuinneoga a shábháil don chéad uair eile a thosóidh %S?
 messageNoWindows=An bhfuil fonn ort do chuid cluaisíní a shábháil don chéad uair eile a thosóidh %S?
+messagePrivate=You're in private browsing mode. Quitting %S now will discard all your open tabs and windows.
