--- a/ga-IE/browser/chrome/browser/shellservice.properties
+++ b/ga-IE/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S &Roghanna
 safeModeLabel=%S Mód &Slán
-setDefaultBrowserTitle=Brabhsálaí Réamhshocraithe
-setDefaultBrowserMessage=Níl %S curtha mar bhrabhsálaí réamhshocraithe. An bhfuil tú ag iarraidh é a shocrú mar bhrabhsálaí réamhshocraithe?
-setDefaultBrowserDontAsk=Seiceáil mar seo i gcónaí agus %S á thosú.
-alreadyDefaultBrowser=Tá %S cheana ina bhrabhsálaí réamhshocraithe.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Get the most out of %S by setting it as your default browser
+setDefaultBrowserConfirm.label     = Use %S as my default browser
+setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserOptions.label     = Roghanna
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Not now
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Ná fiafraigh díom arís
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin=Deasc Firefox.bmp
 DesktopBackgroundDownloading=Pictiúr á Shábháil…
 DesktopBackgroundSet=Socraigh Cúlra na Deisce
