--- a/ga-IE/browser/chrome/browser/webrtcIndicator.properties
+++ b/ga-IE/browser/chrome/browser/webrtcIndicator.properties
@@ -9,11 +9,12 @@
 # titles. It is not normally visible anywhere.
 webrtcIndicator.windowtitle = %S - Sharing Indicator
 
-webrtcIndicator.sharingCameraAndMicrophone.tooltip = Your camera and microphone are being shared. Click to control sharing.
-webrtcIndicator.sharingCamera.tooltip              = Your camera is being shared. Click to control sharing.
-webrtcIndicator.sharingMicrophone.tooltip          = Your microphone is being shared. Click to control sharing.
-webrtcIndicator.sharingScreen.tooltip = Your screen is being shared. Click to control sharing.
-webrtcIndicator.sharingWindow.tooltip = A window is being shared. Click to control sharing.
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = Tá do cheamara agus do mhicreafón á gcomhroinnt. Cliceáil chun comhroinnt a bhainistiú.
+webrtcIndicator.sharingCamera.tooltip              = Tá do cheamara á chomhroinnt. Cliceáil chun comhroinnt a bhainistiú.
+webrtcIndicator.sharingMicrophone.tooltip          = Tá do mhicreafón á chomhroinnt. Cliceáil chun comhroinnt a bhainistiú.
+webrtcIndicator.sharingApplication.tooltip = Tá feidhmchlár á chomhroinnt. Cliceáil chun comhroinnt a bhainistiú.
+webrtcIndicator.sharingScreen.tooltip = Tá do scáileán á chomhroinnt. Cliceáil chun comhroinnt a bhainistiú.
+webrtcIndicator.sharingWindow.tooltip = Tá fuinneog á comhroinnt. Cliceáil chun comhroinnt a bhainistiú.
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
@@ -21,17 +22,32 @@ webrtcIndicator.sharingWindow.tooltip = A window is being shared. Click to contr
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.sharingCameraWith.menuitem = Sharing Camera with "%S"
-webrtcIndicator.sharingMicrophoneWith.menuitem = Sharing Microphone with "%S"
-webrtcIndicator.sharingScreenWith.menuitem = Sharing Screen with "%S"
-webrtcIndicator.sharingWindowWith.menuitem = Sharing a Window with "%S"
-webrtcIndicator.controlSharing.menuitem = Control Sharing
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
-webrtcIndicator.sharingCameraWithNTabs.menuitem = Sharing Camera with #1 tab;Sharing Camera with #1 tabs
-webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Sharing Microphone with #1 tab;Sharing Microphone with #1 tabs
-webrtcIndicator.sharingScreenWithNTabs.menuitem = Sharing Screen with #1 tab;Sharing Screen with #1 tabs
-webrtcIndicator.sharingWindowWithNTabs.menuitem = Sharing a Window with #1 tab;Sharing Windows with #1 tabs
+webrtcIndicator.sharingCameraWith.menuitem = Ceamara á chomhroinnt le "%S"
+webrtcIndicator.sharingMicrophoneWith.menuitem = Micreafón á chomhroinnt le "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Feidhmchlár á chomhroinnt le "%S"
+webrtcIndicator.sharingScreenWith.menuitem = Scáileán á chomhroinnt le "%S"
+webrtcIndicator.sharingWindowWith.menuitem = Fuinneog á comhroinnt le "%S"
+webrtcIndicator.controlSharing.menuitem = Bainistigh an Chomhroinnt
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingCameraWithNTabs.menuitem = Ceamara á chomhroinnt le #1 chluaisín;Ceamara á chomhroinnt le #1 chluaisín;Ceamara á chomhroinnt le #1 chluaisín;Ceamara á chomhroinnt le #1 gcluaisín;Ceamara á chomhroinnt le #1 cluaisín
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Micreafón á chomhroinnt le #1 chluaisín;Micreafón á chomhroinnt le #1 chluaisín;Micreafón á chomhroinnt le #1 chluaisín;Micreafón á chomhroinnt le #1 gcluaisín;Micreafón á chomhroinnt le #1 cluaisín
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Feidhmchlár á chomhroinnt le #1 chluaisín;Feidhmchlár á chomhroinnt le #1 chluaisín;Feidhmchlár á chomhroinnt le #1 chluaisín;Feidhmchlár á chomhroinnt le #1 gcluaisín;Feidhmchlár á chomhroinnt le #1 cluaisín
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingScreenWithNTabs.menuitem = Scáileán á chomhroinnt le #1 chluaisín;Scáileán á chomhroinnt le #1 chluaisín;Scáileán á chomhroinnt le #1 chluaisín;Scáileán á chomhroinnt le #1 gcluaisín;Scáileán á chomhroinnt le #1 cluaisín
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingWindowWithNTabs.menuitem = Fuinneog á comhroinnt le #1 chluaisín;Fuinneog á comhroinnt le #1 chluaisín;Fuinneog á comhroinnt le #1 chluaisín;Fuinneog á comhroinnt le #1 gcluaisín;Fuinneog á comhroinnt le #1 cluaisín
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.controlSharingOn.menuitem = Control Sharing on "%S"
+webrtcIndicator.controlSharingOn.menuitem = Bainistigh an Comhroinnt ar "%S"
