--- a/ga-IE/dom/chrome/accessibility/AccessFu.properties
+++ b/ga-IE/dom/chrome/accessibility/AccessFu.properties
@@ -20,7 +20,7 @@ toolbar        =       barra uirlisí
 statusbar      =       barra stádais
 table          =       tábla
 columnheader   =       ceanntásc colúin
-rowheader      =       ceanntásc ró
+rowheader      =       ró ceanntásc
 column         =       colún
 row            =       ró
 cell           =       cill
@@ -42,7 +42,7 @@ spinbutton     =       caschnaipe
 diagram        =       léaráid
 animation      =       beochan
 equation       =       cothromóid
-buttonmenu     =       roghchlár cnaipe
+buttonmenu     =       cnaipe roghchláir
 whitespace     =       spás bán
 pagetablist    =       liosta cluaisíní
 canvas         =       canbhás
@@ -58,8 +58,8 @@ footer         =       buntásc
 paragraph      =       alt
 entry          =       iontráil
 caption        =       foscríbhinn
-heading        =       ceanntásc
-section        =       rannán
+heading        =       ceannteideal
+section        =       rannóg
 form           =       foirm
 comboboxlist   =       liosta i mbosca teaglama
 comboboxoption =       rogha bhosca teaglama
@@ -94,11 +94,10 @@ listEnd        =       An mhír dheiridh
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 mhír;#1 mhír;#1 mhír;#1 mír;#1 mír
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S as %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S as %2$S
 
 # Landmark announcements
 banner         =       meirge
@@ -108,17 +107,14 @@ main           =       príomh
 navigation     =       nascleanúint
 search         =       cuardach
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S le %S agus %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 cholún;#1 cholún;#1 cholún;#1 gcolún;#1 colún
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = le 1 cholún;le #1 cholún;le #1 cholún;le #1 gcolún;le #1 colún
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 ró;#1 ró;#1 ró;#1 ró;#1 ró
+tblRowInfo = agus 1 ró;agus #1 ró;agus #1 ró;agus #1 ró;agus #1 ró
 
 # table or grid cell information
 columnInfo = Colún %S
@@ -190,18 +186,85 @@ quicknav_Table       = Táblaí
 quicknav_Checkbox    = Ticbhoscaí
 
 # Shortened role names for braille
-linkAbbr           =       nsc
-pushbuttonAbbr     =       cnp
-passwordtextAbbr   =       ff
-imagemapAbbr       =       mapa
-figureAbbr         =       pic
-textareaAbbr       =       lmstrtcs
+menubarAbbr        =       barra roghchláir
+scrollbarAbbr      =       scrollbharra
+gripAbbr           =       greim
+alertAbbr          =       foláireamh
+menupopupAbbr      =       roghchlár aníos
+documentAbbr       =       cáipéis
+paneAbbr           =       pána
+dialogAbbr         =       dialóg
+separatorAbbr      =       deighilteoir
+toolbarAbbr        =       barra uirlisí
+statusbarAbbr      =       barra stádais
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       ceanntásc colúin
+rowheaderAbbr      =       ceanntásc ró
+columnAbbr         =       colún
+rowAbbr            =       ró
+cellAbbr           =       cill
+linkAbbr           =       nsc
+listAbbr           =       liosta
+listitemAbbr       =       mír liosta
+outlineAbbr        =       imlíne
+outlineitemAbbr    =       mír imlíne
+pagetabAbbr        =       cluaisín
+propertypageAbbr   =       leathanach airíonna
+graphicAbbr        =       grafaic
+pushbuttonAbbr     =       cnp
+checkbuttonAbbr    =       tic-chnaipe
+radiobuttonAbbr    =       cnaipe raidió
+comboboxAbbr       =       bosca teaglama
+progressbarAbbr    =       barra dul chun cinn
+sliderAbbr         =       sleamhnán
+spinbuttonAbbr     =       caschnaipe
+diagramAbbr        =       léaráid
+animationAbbr      =       beochan
+equationAbbr       =       cothromóid
+buttonmenuAbbr     =       cnaipe roghchláir
+whitespaceAbbr     =       spás bán
+pagetablistAbbr    =       liosta cluaisíní
+canvasAbbr         =       canbhás
+checkmenuitemAbbr  =       mír i roghchlár ticeáilte
+labelAbbr          =       lipéad
+passwordtextAbbr   =       ff
+radiomenuitemAbbr  =       mír i roghchlár raidió
+textcontainerAbbr  =       coimeádán téacs
+togglebuttonAbbr   =       cnaipe scoránaithe
+treetableAbbr      =       tábla crainn
+headerAbbr         =       ceanntásc
+footerAbbr         =       buntásc
+paragraphAbbr      =       alt
+entryAbbr          =       iontráil
+captionAbbr        =       foscríbhinn
+headingAbbr        =       ceannteideal
+sectionAbbr        =       rannóg
+formAbbr           =       foirm
+comboboxlistAbbr   =       liosta i mbosca teaglama
+comboboxoptionAbbr =       rogha bhosca teaglama
+imagemapAbbr       =       mapa
+listboxoptionAbbr  =       rogha
+listboxAbbr        =       bosca liosta
+flatequationAbbr   =       cothromóid chothrom
+gridcellAbbr       =       cill ghreille
+noteAbbr           =       nóta
+figureAbbr         =       pic
+definitionlistAbbr =       liosta sainmhínithe
+termAbbr           =       téarma
+definitionAbbr     =       sainmhíniú
+textareaAbbr       =       lmstrtcs
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c;#1c;#1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c;#1c;#1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r;#1r;#1r;#1r
+tblRowInfoAbbr = #1r;#1r;#1r;#1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
