--- a/ga-IE/dom/chrome/dom/dom.properties
+++ b/ga-IE/dom/chrome/dom/dom.properties
@@ -34,17 +34,17 @@ FormValidationPatternMismatch=Ní mór duit an fhormáid iarrtha a úsáid.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Ní mór duit an fhormáid iarrtha a úsáid: %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
-FormValidationNumberRangeOverflow=Please select a value that is no more than %S.
+FormValidationNumberRangeOverflow=Tabhair luach nach bhfuil níos mó ná %S.
 # LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
-FormValidationDateRangeOverflow=Please select a value that is no later than %S.
+FormValidationDateRangeOverflow=Tabhair luach nach bhfuil níos déanaí ná %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
-FormValidationTimeRangeOverflow=Please select a value that is no later than %S.
+FormValidationTimeRangeOverflow=Tabhair luach nach bhfuil níos déanaí ná %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
-FormValidationNumberRangeUnderflow=Please select a value that is no less than %S.
+FormValidationNumberRangeUnderflow=Tabhair luach nach bhfuil níos lú ná %S.
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
-FormValidationDateRangeUnderflow=Please select a value that is no earlier than %S.
+FormValidationDateRangeUnderflow=Tabhair luach nach bhfuil níos luaithe ná %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
-FormValidationTimeRangeUnderflow=Please select a value that is no earlier than %S.
+FormValidationTimeRangeUnderflow=Tabhair luach nach bhfuil níos luaithe ná %S.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
 FormValidationStepMismatch=Roghnaigh luach bailí, le do thoil. Seo iad na luachanna bailí is gaire: %S agus %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
@@ -57,7 +57,7 @@ SetAttributeNodeNSWarning=Ní mholtar setAttributeNodeNS() a úsáid a thuillead
 RemoveAttributeNodeWarning=Ní mholtar removeAttributeNode() a úsáid a thuilleadh. Bain úsáid as removeAttribute() ina ionad.
 CreateAttributeWarning=Ní mholtar document.createAttribute() a úsáid a thuilleadh. Bain úsáid as element.setAttribute() ina ionad.
 CreateAttributeNSWarning=Ní mholtar document.createAttributeNS() a úsáid a thuilleadh. Bain úsáid as element.setAttributeNS() ina ionad.
-OwnerElementWarning=Use of attributes' ownerElement attribute is deprecated.
+OwnerElementWarning=Moltar gan aitreabúid 'ownerElement' de chuid aitreabúide a úsáid a thuilleadh.
 NodeValueWarning=Moltar gan aitreabúid 'nodeValue' de chuid aitreabúide a úsáid a thuilleadh. Úsáid 'value' ina ionad.
 TextContentWarning=Moltar gan aitreabúid 'textContent' de chuid aitreabúide a úsáid a thuilleadh. Úsáid 'value' ina ionad.
 EnablePrivilegeWarning=Ní mholtar enablePrivilege a úsáid a thuilleadh. Bain úsáid as cód a ritheann leis an 'system principal' (m.sh. eisínteacht) ina ionad.
@@ -208,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key value "Zoom" is obsolete and will be rename
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key values starting with "Dead" are obsolete and will be merged into just "Dead". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importing XUL nodes into a content document is deprecated. This functionality may be removed soon.
+XMLDocumentLoadPrincipalMismatch=Use of document.load forbidden on Documents that come from other Windows. Only the Window in which a Document was created is allowed to call .load on that Document. Preferably, use XMLHttpRequest instead.
