--- a/ga-IE/dom/chrome/plugins.properties
+++ b/ga-IE/dom/chrome/plugins.properties
@@ -20,5 +20,5 @@ mimetype_label=Cineál MIME
 description_label=Cur Síos
 suffixes_label=Iarmhíreanna
 
-openH264_name=OpenH264 Video Codec provided by Cisco Systems, Inc.
-openH264_description=Play back web video and use video chats.
+openH264_name=Codec Físe OpenH264 le caoinchead Cisco Systems, Inc.
+openH264_description=Seinn físeáin ar an nGréasán agus déan físchomhráite.
