--- a/ga-IE/mobile/android/chrome/browser.properties
+++ b/ga-IE/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Suiteáil
 
 # Alerts
 alertAddonsDownloading=Breiseán á íosluchtú
-alertAddonsInstalledNoRestart=Suiteáil críochnaithe
 alertAddonsFail=Theip ar shuiteáil
+alertAddonsInstalledNoRestart.message=Suiteáil críochnaithe
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=BREISEÁIN
 
 alertDownloadsStart2=Íosluchtú ag tosú
 alertDownloadsDone2=Íosluchtú críochnaithe
@@ -19,6 +23,9 @@ alertDownloadsToast=Tosaíodh an t-íosluchtú…
 alertDownloadsPause=Sos
 alertDownloadsResume=Lean
 alertDownloadsCancel=Cealaigh
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Ní féidir aon rud a íosluchtú i seisiún ar iasacht
 
 alertFullScreenToast=Brúigh BACK chun éirí as an lánscáileán
 
@@ -116,6 +123,35 @@ contacts.ask=An bhfuil cead ag %S do chuid teagmhálacha a úsáid?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ná fiafraigh díom arís le haghaidh an tsuímh seo
 
+# Device Storage API
+deviceStorageMusic.allow=Ceadaigh
+deviceStorageMusic.dontAllow=Ná ceadaigh
+deviceStorageMusic.ask=An bhfuil cead ag %S do chuid ceoil a rochtain?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ná fiafraigh díom arís le haghaidh an tsuímh seo
+
+deviceStoragePictures.allow=Ceadaigh
+deviceStoragePictures.dontAllow=Ná ceadaigh
+deviceStoragePictures.ask=An bhfuil cead ag %S do chuid íomhánna a rochtain?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ná fiafraigh díom arís le haghaidh an tsuímh seo
+
+deviceStorageSdcard.allow=Ceadaigh
+deviceStorageSdcard.dontAllow=Ná ceadaigh
+deviceStorageSdcard.ask=An bhfuil cead ag %S an stóras seachtrach a rochtain?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ná fiafraigh díom arís le haghaidh an tsuímh seo
+
+deviceStorageVideos.allow=Ceadaigh
+deviceStorageVideos.dontAllow=Ná ceadaigh
+deviceStorageVideos.ask=An bhfuil cead ag %S do chuid físeán a rochtain?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ná fiafraigh díom arís le haghaidh an tsuímh seo
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Cóipeáladh an téacs go dtí an ghearrthaisce
 
 # Casting
-casting.prompt=Craol ar Ghléas
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Send to Device
+casting.mirrorTab=Mirror Tab
+casting.mirrorTabStop=Stop Mirror
 
 # Context menu
 contextmenu.openInNewTab=Oscail an Nasc i gCluaisín Nua
@@ -209,7 +249,9 @@ contextmenu.unmute=Le fuaim
 contextmenu.saveVideo=Sábháil an Físeán
 contextmenu.saveAudio=Sábháil an Fhuaim
 contextmenu.addToContacts=Cuir le Teagmhálacha
-contextmenu.castToScreen=Craol ar an Scáileán
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Send to Device
 
 contextmenu.copy=Cóipeáil
 contextmenu.cut=Gearr
@@ -301,9 +343,9 @@ lwthemeInstallRequest.message=Rinne an suíomh seo (%S) iarracht téama a shuite
 lwthemeInstallRequest.allowButton=Ceadaigh
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message, getUserMedia.sharingCamera.message, getUserMedia.sharingMicrophone.message, getUserMedia.sharingCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.shareCamera.message = An bhfuil fonn ort do cheamara a roinnt le %S?
-getUserMedia.shareMicrophone.message = An bhfuil fonn ort do mhicreafón a roinnt le %S?
-getUserMedia.shareCameraAndMicrophone.message = An bhfuil fonn ort do cheamara agus do mhicreafón a roinnt le %S?
+getUserMedia.shareCamera.message = An bhfuil fonn ort do cheamara a chomhroinnt le %S?
+getUserMedia.shareMicrophone.message = An bhfuil fonn ort do mhicreafón a chomhroinnt le %S?
+getUserMedia.shareCameraAndMicrophone.message = An bhfuil fonn ort do cheamara agus do mhicreafón a chomhroinnt le %S?
 getUserMedia.denyRequest.label = Ná Comhroinn
 getUserMedia.shareRequest.label = Comhroinn
 getUserMedia.videoSource.default = Ceamara %S
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Post
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Roghnaigh fotha
 feedHandler.subscribeWith=Liostáil le
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S is deprecated. Please use %S instead
