--- a/ga-IE/toolkit/chrome/global/aboutSupport.properties
+++ b/ga-IE/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Paraiméadair ClearType gan aimsiú
 adapterDescription = Cur Síos ar an gCuibheoir
 adapterVendorID = Aitheantas Díoltóra
 adapterDeviceID = Aitheantas Gléis
+adapterSubsysID = Subsys ID
 adapterDrivers = Tiománaithe Cuibheora
 adapterRAM = RAM an Chuibheora
 driverVersion = Leagan an Tiománaí
@@ -71,6 +72,7 @@ driverDate = Dáta an Tiománaí
 adapterDescription2 = Cur Síos ar an gCuibheoir (GPU #2) 
 adapterVendorID2 = Aitheantas Díoltóra (GPU #2) 
 adapterDeviceID2 = Aitheantas Gléis (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Tiománaithe Cuibheora (GPU #2)
 adapterRAM2 = RAM an Chuibheora (GPU #2)
 driverVersion2 = Leagan an Tiománaí (GPU #2)
