--- a/ga-IE/webapprt/webapprt/webapp.properties
+++ b/ga-IE/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Suiteáil %S
 webapps.install.description=An bhfuil fonn ort %S a shuiteáil?
 webapps.install.install=Suiteáil an Aip
 webapps.install.dontinstall=Ná Suiteáil
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Díshuiteáil %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=An bhfuil fonn ort %S a dhíshuiteáil?
+webapps.uninstall.uninstall=Díshuiteáil an Aip
+webapps.uninstall.dontuninstall=Ná Díshuiteáil
 
 paymentDialog.title=Íocaíocht
 paymentDialog.message=Cé acu soláthraithe íocaíochta ab fhearr leat?
