--- a/ga-IE/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/ga-IE/browser/chrome/browser/devtools/sourceeditor.properties
@@ -56,7 +56,7 @@ autocompletion.docsLink=docs
 
 # LOCALIZATION NOTE  (autocompletion.notFound): This is the text shown in
 # the documentation popup if Tern fails to find a type for the object.
-autocompletion.notFound=not found
+autocompletion.notFound=gan aimsiú
 
 # LOCALIZATION NOTE  (jumpToLine.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to jump to
@@ -98,4 +98,4 @@ autocompletion.commandkey=Spás
 
 # LOCALIZATION NOTE  (showInformation2.commandkey): This is the key to use to
 # show more information, like type inference.
-showInformation2.commandkey=Shift-Ctrl-Space
+showInformation2.commandkey=Shift-Ctrl-Spás
