--- a/ga-IE/browser/chrome/browser/devtools/toolbox.properties
+++ b/ga-IE/browser/chrome/browser/devtools/toolbox.properties
@@ -33,15 +33,19 @@ toolbox.titleTemplate=%1$S - %2$S
 
 # LOCALIZATION NOTE (toolbox.defaultTitle): This is used as the tool
 # name when no tool is selected.
-toolbox.defaultTitle=Developer Tools
+toolbox.defaultTitle=Uirlisí Forbróra
 
 # LOCALIZATION NOTE (toolbox.label): This is used as the label for the
 # toolbox as a whole
-toolbox.label=Developer Tools
+toolbox.label=Uirlisí Forbróra
 
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
 optionsButton.tooltip=Roghanna Bosca Uirlisí
+
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Roghanna
 
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Roghnaigh eilimint ón leathanach
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Téama dorcha
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Téama sorcha
