--- a/ga-IE/dom/chrome/security/csp.properties
+++ b/ga-IE/dom/chrome/security/csp.properties
@@ -5,11 +5,11 @@
 # CSP Warnings:
 # LOCALIZATION NOTE (CSPViolation):
 # %1$S is the reason why the resource has not been loaded.
-CSPViolation = The page's settings blocked the loading of a resource: %1$S
+CSPViolation = Cuireadh bac ar acmhainn mar gheall ar shocraithe an leathanaigh: %1$S
 # LOCALIZATION NOTE (CSPViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
-CSPViolationWithURI = The page's settings blocked the loading of a resource at %2$S ("%1$S").
+CSPViolationWithURI = Cuireadh bac ar acmhainn ag %2$S mar gheall ar shocruithe an leathanaigh ("%1$S").
 # LOCALIZATION NOTE (CSPROViolation):
 # %1$S is the reason why the resource has not been loaded.
 CSPROViolation = A violation occurred for a report-only CSP policy ("%1$S"). The behavior was allowed, and a CSP report was sent.
@@ -55,16 +55,19 @@ reportPostRedirect = Níorbh fhéidir tuairisc a sheoladh chuig %1$S, mar gur th
 allowDirectiveIsDeprecated = allow directive is deprecated, use the equivalent default-src directive instead
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
-inlineScriptBlocked = An attempt to execute inline scripts has been blocked
+inlineScriptBlocked = Cuireadh cosc ar iarracht scripteanna inlíne a rith
 # LOCALIZATION NOTE (inlineStyleBlocked):
 # inline style refers to CSS code that is embedded into the HTML document.
-inlineStyleBlocked = An attempt to apply inline style sheets has been blocked
+inlineStyleBlocked = Cuireadh cosc ar iarracht stílbhileoga inlíne a chur i bhfeidhm
 # LOCALIZATION NOTE (scriptFromStringBlocked):
 # eval is a name and should not be localized.
 scriptFromStringBlocked = An attempt to call JavaScript from a string (by calling a function like eval) has been blocked
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Interpreting %1$S as a hostname, not a keyword. If you intended this to be a keyword, use '%2$S' (wrapped in single quotes).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Not supporting directive '%1$S'. Directive and values will be ignored.
 
 # CSP Errors:
 policyURINotAlone = policy-uri directive can only appear alone
