--- a/ga-IE/mobile/android/chrome/webapp.properties
+++ b/ga-IE/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=Theip ar #1 nuashonrú;Theip ar #1 nuashonrú;Theip ar #1 n
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Níorbh fhéidir an nuashonrú ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú
+
+webappsDisabledInGuest=Ní féidir aipeanna a shuiteáil i seisiún ar iasacht
