[qa] browser, loop: typos

--- a/sr/browser/chrome/browser/loop/loop.properties
+++ b/sr/browser/chrome/browser/loop/loop.properties
@@ -207,7 +207,7 @@ call_progress_connecting_description=Повезујем се…
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
 call_progress_ringing_description=Звони…
 
-peer_ended_conversation2=Особа коју су звали је завршио разговор.
+peer_ended_conversation2=Особа коју су звали је завршила разговор.
 conversation_has_ended=Разговор је завршен.
 restart_call=Поново се придружи
 
