--- a/sr/browser/chrome/browser/webrtcIndicator.properties
+++ b/sr/browser/chrome/browser/webrtcIndicator.properties
@@ -47,7 +47,7 @@ webrtcIndicator.sharingScreenWithNTabs.menuitem = Делим екран са #1 
 # LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingWindowWithNTabs.menuitem = Делим прозоре са #1 језичком;Делим прозоре са #1 језичака
+webrtcIndicator.sharingWindowWithNTabs.menuitem = Делим прозор са #1 језичком;Делим прозоре са #1 језичака
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
-webrtcIndicator.controlSharingOn.menuitem = Контролиши дељење на  "%S"
+webrtcIndicator.controlSharingOn.menuitem = Контролиши дељење на "%S"
