[S] loop: Bug 1042060 - Implement default answering mode for desktop client

--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -61,6 +61,7 @@ initiate_call_button_label2 = Pronto per avviare una conversazione?
 incoming_call_title2 = Richiesta conversazione
 incoming_call_accept_button = Accetta
 incoming_call_accept_audio_only_tooltip = Accetta solo audio
+incoming_call_accept_audio_video_tooltip = Accetta con video
 incoming_call_cancel_button = Annulla
 incoming_call_cancel_and_block_button = Annulla e blocca
 incoming_call_block_button = Blocca
