--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -174,6 +174,7 @@ initiate_call_button_label2=Pripravený začať hovor?
 incoming_call_title2=Pozvánka na hovor
 incoming_call_accept_button=Prijať
 incoming_call_accept_audio_only_tooltip=Prijať len so zvukom
+incoming_call_accept_audio_video_tooltip=Prijať aj s videom
 incoming_call_cancel_button=Odmietnuť
 incoming_call_cancel_and_block_button=Odmietnuť a zablokovať
 incoming_call_block_button=Zablokovať
