Updated SeaMonkey Hungarian translation

--- a/hu/suite/chrome/common/notification.properties
+++ b/hu/suite/chrome/common/notification.properties
@@ -119,16 +119,17 @@ lwthemeNeedsRestart.restartButton=Újraindítás most
 lwthemeNeedsRestart.restartButton.accesskey=j
 
 # Geolocation UI
-# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation geolocation.alwaysShare geolocation.neverShare):
-#If you're having trouble with the word Share, please use Allow and Block in your language.
+# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
+#shareLocation is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Share or Allow/Block.
 geolocation.shareLocation=Földrajzi hely adatainak megosztása
 geolocation.shareLocation.accesskey=a
-geolocation.dontShareLocation=Titok
-geolocation.dontShareLocation.accesskey=T
-geolocation.alwaysShareLocation=Mindig megosztható
-geolocation.alwaysShareLocation.accesskey=M
-geolocation.neverShareLocation=Soha nem osztható meg
-geolocation.neverShareLocation.accesskey=S
+geolocation.dontShareThisRequest=Erre a kérésre ne
+geolocation.dontShareThisRequest.accesskey=E
+geolocation.alwaysShareForSite=Ezen a webhelyen mindig
+geolocation.alwaysShareForSite.accesskey=m
+geolocation.neverShareForSite=Ezen a webhelyen soha
+geolocation.neverShareForSite.accesskey=s
 geolocation.siteWantsToKnow=%S tudni szeretné az Ön tartózkodási helyét.
 geolocation.fileWantsToKnow=A(z) %S fájl tudni szeretné az Ön tartózkodási helyét.
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
@@ -137,26 +138,30 @@ geolocation.learnMore=További tudnivalók…
 geolocation.remember=Megjegyzés ehhez a webhelyhez
 
 # Desktop Notifications
+# LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
+#showForSession is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Show or Allow/Block.
 webNotifications.showForSession=Értesítések megjelenítése
 webNotifications.showForSession.accesskey=w
-webNotifications.dontShowForSession=Ne jelenjen meg
-webNotifications.dontShowForSession.accesskey=N
-webNotifications.alwaysShow=Mindig megjelenik
-webNotifications.alwaysShow.accesskey=M
-webNotifications.neverShow=Soha ne mutassa
-webNotifications.neverShow.accesskey=S
+webNotifications.dontShowThisSession=Erre a munkamenetre ne
+webNotifications.dontShowThisSession.accesskey=u
+webNotifications.alwaysShowForSite=Ezen a webhelyen mindig
+webNotifications.alwaysShowForSite.accesskey=i
+webNotifications.neverShowForSite=Ezen a webhelyen soha
+webNotifications.neverShowForSite.accesskey=b
 webNotifications.showFromSite=Szeretné megjeleníteni az értesítéseket innen: %S?
 webNotifications.remember=Megjegyzés ehhez a webhelyhez
 
 # IndexedDB
 offlineApps.permissions=Ez a webhely (%S) adatokat szeretne tárolni a számítógépen kapcsolat nélküli felhasználás céljából.
+offlineApps.private=Privát ablakban dolgozik. Ennek a webhelynek (%S) nincs engedélyezve, hogy adatokat tároljon a számítógépen kapcsolat nélküli felhasználás céljából.
 offlineApps.quota=A(z) %1$S webhely több, mint %2$S MB adatot próbál tárolni a számítógépen kapcsolat nélküli használat céljából.
-offlineApps.allow=Engedélyezés
-offlineApps.allow.accesskey=E
+offlineApps.always=Mindig
+offlineApps.always.accesskey=g
 offlineApps.later=Most nem
 offlineApps.later.accesskey=M
-offlineApps.deny=Ezen a webhelyen soha
-offlineApps.deny.accesskey=z
+offlineApps.never=Ezen a webhelyen soha
+offlineApps.never.accesskey=z
 
 # Block autorefresh
 refreshBlocked.goButton=Engedélyezés
