--- a/hu/suite/chrome/common/pref/prefutilities.properties
+++ b/hu/suite/chrome/common/pref/prefutilities.properties
@@ -7,7 +7,7 @@ cachefolder=Gyorsítótármappa kiválasztása
 cacheSizeInfo=A gyorsítótár jelenleg %1$S %2$S területet foglal el a lemezen.
 
 # Offline apps
-appCacheSizeInfo=Az alkalmazás-gyorsítótár jelenleg %1$S %2$S területet foglal el a lemezen.
+offlineAppSizeInfo=A gyorsítótár jelenleg %1$S területet foglal el a lemezen a rendelkezésre álló %2$S területből.
 offlineAppRemoveTitle=Kapcsolat nélküli webhelyadatok eltávolítása
 offlineAppRemovePrompt=Ezen adatok eltávolítása után a(z) %S nem lesz elérhető kapcsolat nélküli módban. Biztosan eltávolítja ezt a kapcsolat nélküli webhelyet?
 offlineAppRemoveConfirm=Kapcsolat nélküli adatok eltávolítása
