--- a/hu/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/hu/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -250,7 +250,9 @@ copyMessageStart=Üzenet másolása a következő mappába: %S ...
 copyMessageComplete=A másolás kész.
 copyMessageFailed=A másolás sikertelen.
 
-sendLargeMessageWarning=Vigyázat! Ön %d byte méretű üzenetet akar küldeni. Biztos benne, hogy ezt akarja tenni?
+## LOCALIZATION NOTE (largeMessageSendWarning):
+## %S is the message size in user-friendly notation. Do not translate.
+largeMessageSendWarning=Warning! You are about to send a message of size %S which may exceed the allowed limit on the mail server. Are you sure that you want to do this?
 
 sendingMessage=Üzenet feladása...
 sendMessageErrorTitle=Hiba az üzenet küldésekor
